<resources>
    <string name="app_name">Animal Info</string>
    <string name="album_description_name">Animal name</string>
    <string name="has_fur">Has fur?</string>
    <string name="album_description_legs">Legs</string>
    <string name="submit">Submit</string>
    <string name="habitat">Habitat:</string>
    <string name="animal_list">Animal List</string>
    <string name="add_animal">Add another animal</string>
    <string-array name="habitat_array">
        <item>Terrestrial</item>
        <item>Aerial</item>
        <item>Arboreal</item>
        <item>Aquatic</item>
        <item>Amphibians</item>
    </string-array>
</resources>
