<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.test.jq.inclassassignment07_jieqiongl.InputActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_description_name"
            android:inputType="textCapWords"
            android:padding="16dp" />

        <EditText
            android:id="@+id/legs_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_description_legs"
            android:inputType="number"
            android:padding="16dp" />

        <CheckBox
            android:id="@+id/has_fur_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/has_fur"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/habitat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/habitat"
                android:textSize="16sp"
                android:padding="16dp"/>

            <Spinner
                android:id="@+id/habitat_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:padding="16dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
